Fix horizontal scroll in menu-list

--- a/src/blocks/common.blocks/menu-list/_type/menu-list_type_default.css
+++ b/src/blocks/common.blocks/menu-list/_type/menu-list_type_default.css
@@ -1,5 +1,7 @@
 .menu-list_type_default
 {
+    overflow-x: hidden;
+
     min-width: 150px;
     max-width: 300px;
 
